<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login"
        android:paddingBottom="40dp">

        <ImageView
            android:id="@+id/img_logo_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />


        <LinearLayout
            android:id="@+id/linearLayout_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/custom_button_login"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_login_training">

            <ImageView
                android:id="@+id/img_email"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:paddingTop="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_login_email" />

            <TextView
                android:id="@+id/txt_email"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:autoSizeMaxTextSize="20sp"
                android:gravity="center"
                android:text="E-MAIL"
                android:textColor="@color/bright_turquoise"
                android:textSize="13sp"
                android:fontFamily="@font/montserrat_bold"
                app:layout_constraintStart_toStartOf="@id/img_email" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_fb"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button_login"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.888"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_email">

            <ImageView
                android:id="@+id/img_login_fbook"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:scaleType="center"
                android:padding="10dp"
                android:src="@drawable/ic_login_fbook" />

            <TextView
                android:id="@+id/txt_login_fbook"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="FACEBOOK"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/bright_turquoise"
                android:textSize="13sp"
                android:autoSizeMaxTextSize="20sp"
                app:layout_constraintStart_toStartOf="@id/img_login_fbook" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout_gmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button_login"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_fb">

            <ImageView
                android:id="@+id/img_login_gmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:src="@drawable/ic_login_gmail" />

            <TextView
                android:id="@+id/txt_login_gmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="GMAIL"
                android:fontFamily="@font/montserrat_bold"
                android:autoSizeMaxTextSize="20sp"
                android:textColor="@color/bright_turquoise"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="@id/img_login_gmail" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_login_improve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:text="@string/login_txt_h1"
            android:textColor="@color/bright_turquoise"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_login_fb" />

        <TextView
            android:id="@+id/txt_login_training"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/login_txt_h2"
            android:textColor="@color/colorWhite"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_login_improve" />

        <TextView
            android:id="@+id/txt_login_fb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_logo_login" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>